[package]
name = "sesstype"
version = "0.2.4"
authors = ["The libsesstype Contributors"]
description = "An implementation of Multiparty Session Types"
repository = "https://github.com/nickng/sesstype.rs"
readme = "README.md"
keywords = ["session", "types"]
categories = ["data-structures", "development-tools"]
license = "Apache-2.0"

[dependencies]
nom = "^3.2"

[badges]
